add cc by-sa 4.0 license

--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@ Tree (top right)</td></tr>
 </table>
 <hr><hr><br>
 &nbsp;
-<P ALIGN=LEFT><IMG SRC="http://main.nc.us/senechal/home_counter.cgi" ALT="Visitor Count"></P>
 
-<table border="0">
-<tr><td><a href="http://webdevelopmenttutorials.com/" target="_blank">
-<img src="http://webdevelopmenttutorials.com/public/counter-text.php?display=uniques&style=0101010" alt="Hit Counter" border="0" />
-</a><br /></td></tr>
-</table>
+<div style="float: right;">
+  <p>Visitor Count</p>
+  <img src="http://webdevelopmenttutorials.com/public/counter-text.php?display=uniques&style=0101010" alt="Hit Counter" border="0" />
+</div>
+
+<div style="float: left;">
+  <p>
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+  </p>
+</div>
 
 </BODY>
 </HTML>
